--- a/index.css
+++ b/index.css
@@ -95,8 +95,12 @@ button{
  }
 
  .hidden{
-   display: none;
-
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+ }
+ .display{
+   opacity: 0.99;
+   transition: opacity 1s ease-in-out;
  }
 
 /* responsive-part */
@@ -122,6 +126,7 @@ button{
     display: inline-block;
     border: none;
 
+
   }
 
   button{
@@ -139,9 +144,7 @@ button{
     opacity: 0.7;
   }
 
-  .nav2{
-    transition: 1s;
-  }
+
 
   .nav2 nav{
     background-color: #d3dff2 ;
@@ -152,19 +155,23 @@ button{
 
   .nav2 ul{
     list-style: none;
+    align-items: center;
+    padding-left: 10px;
+    padding-right: 5px;
 
   }
 
   .nav2 li{
     display: inline;
-    padding: 0 33px 0 33px;
+    padding: 0 10px 0 10px;
+    align-items: center;
 
   }
 
   .nav2 li a{
     text-decoration: none;
     color: #7F8AC5 ;
-    font-size: 25px;
+    font-size: 40px;
 
   }
 
