--- a/index.css
+++ b/index.css
@@ -263,7 +263,7 @@ header a button:focus{
 
 .bubcirc{
   padding: 10px;
-  background-color: #0C003A;
+  background-color: #4C5AA1;
   position: relative;
   top: 40px;
   left:20px;
@@ -307,7 +307,7 @@ header a button:focus{
   position: relative;
   margin-left: 150px;
   margin-right: 20px;
-  background: #0C003A ;
+  background: #4C5AA1 ;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   border-bottom-left-radius: 5px;
@@ -324,9 +324,9 @@ header a button:focus{
   width: 0px;
   height: 0px;
   position: absolute;
-  border-right: 24px solid #0C003A;
+  border-right: 24px solid #4C5AA1;
   border-left: 12px solid transparent;
-  border-top: 12px solid #0C003A;
+  border-top: 12px solid #4C5AA1;
   border-bottom: 20px solid transparent;
 
   left: 191px;
@@ -454,6 +454,7 @@ header a button:focus{
     border-top-right-radius: 80px;
     border-bottom-left-radius: 80px;
     border-bottom-right-radius: 0;
+    background-color: #ffffff;
   }
 
   .chatcon{
