--- a/index.css
+++ b/index.css
@@ -9,6 +9,8 @@ body{
   color: #ffff;
   font-family: 'Montserrat', sans-serif;
 
+
+
 }
 
 
@@ -124,8 +126,11 @@ header a button:focus{
 }
 
 .chaton{
+  position: fixed;
   padding: 12px 6px;
-  margin: 0 0 20px 1200px;
+  margin: 2%;
+  bottom: -2%;
+  left: 86%;
   border:none;
   border-top-left-radius: 50px;
   border-top-right-radius: 50px;
@@ -133,6 +138,8 @@ header a button:focus{
   border-bottom-right-radius:0;
   cursor: pointer;
   background-color: #ffffff;
+  z-index: 500001!important;
+  box-shadow: 0 0 50px 0 #888888 ;
 }
 
 .chaton:focus{
@@ -152,7 +159,7 @@ header a button:focus{
   background-color: #ffffff;
   color: #000000;
   left:55%;
-  bottom: 6%;
+  bottom: 10%;
   right: 5.2%;
   border-radius: 10px;
   font-size: 0.6rem;
@@ -168,6 +175,7 @@ header a button:focus{
   margin: 20px 20px 10px 20px;
   border-radius: 10px;
   padding: 10px 50px;
+  z-index: 400;
 }
 
 .c-1 h2{
@@ -209,7 +217,7 @@ header a button:focus{
   background-color: #ffffff;
   color: #000000;
   left:55%;
-  bottom: 6.1%;
+  bottom: 10.1%;
   right: 5.2%;
   border-radius: 10px;
   font-size: 0.6rem;
